--- a/themes.html
+++ b/themes.html
@@ -169,14 +169,14 @@
             <div class="inner">
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Themes</h1>
-                <div id="plugin-list-count" class="total-items">Total Themes: 58</div>
+                <div id="plugin-list-count" class="total-items">Total Themes: 60</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                 </h1>
-                <div id="plugin-list-count">48 Themes</div>
+                <div id="plugin-list-count">50 Themes</div>
                 <hr>
               </header>
               <ul id="plugin-list">
@@ -274,7 +274,37 @@
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/KembEgY.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/outerspace.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
                   <a href="https://betterdocs.net/themes/outerspace.html" class="plugin-name">Space Nova</a>
                   <p class="plugin-desc">Outerspace Dark theme.</p>
-                  <div class="plugin-tag-list"> <a href="#Narugokyu" class="plugin-tag">Narugokyu</a> <a href="#Space" class="plugin-tag">Space</a> <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Narugokyu" class="plugin-tag">Narugokyu</a> 
+                  <a href="#Space" class="plugin-tag">Space</a> 
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> 
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/g4mi4am.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/full-light-theme.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/full-light-theme.html" class="plugin-name">Full Light Theme</a>
+                  <p class="plugin-desc">Most or all parts changed to a lighter way!</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Maple" class="plugin-tag">Maple</a> 
+                  <a href="#Bright" class="plugin-tag">Bright</a>
+                  <a href="#White" class="plugin-tag">White</a> 
+                  <a href="#Light" class="plugin-tag tag-invis">Light</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/Z5AxRmT.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/gaia.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/gaia.html" class="plugin-name">Gaia</a>
+                  <p class="plugin-desc">A transparent theme with altered elements.</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Gimo" class="plugin-tag">Gimo</a> 
+                  <a href="#Purple" class="plugin-tag">Purple</a>
+                  <a href="#Anime" class="plugin-tag">Anime</a> 
+                  <a href="#Gaia" class="plugin-tag">Gaia</a> 
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a>
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#Light" class="plugin-tag tag-invis">Light</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
                 <li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/iqvG1RK.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/witcher3.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
