--- a/themes/full-light-theme.html
+++ b/themes/full-light-theme.html
@@ -2,21 +2,21 @@
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" class="html-page">
 <head>
 <!-- title -->
-<title>Discord Adapta 2</title>
+<title>Full White Theme</title>
 
 <!-- meta -->
 <meta charset="utf-8">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta content="initial-scale=1, maximum-scale=1" name="viewport">
-<meta content="Theme based on the Adapta GTK theme with optional character backgrounds. - Discord Adapta 2" name="description">
-<meta content="Better Discord Theme CSS Dark Teal Blue Transparent Background Image GTK" name="keywords">
+<meta content="Most or all parts changed to a lighter way! - Full White Theme" name="description">
+<meta content="Better Discord Theme CSS Light White Bright Eyes Hurt Maple" name="keywords">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDocs" />
-<meta property="og:title" content="Discord Adapta 2" />
-<meta property="og:description" content="Theme based on the Adapta GTK theme with optional character backgrounds." />
+<meta property="og:title" content="Full White Theme" />
+<meta property="og:description" content="Most or all parts changed to a lighter way!" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 
 <!-- Icon -->
@@ -153,11 +153,11 @@
           <div class="wrapper">
             <div class="inner">
               <header class="release-header">
-                <h1 class="release-title" itemprop="name">Discord Adapta 2</h1>
-                <div class="release-btns"> <a href="https://github.com/TheBITLINK/Discord-Adapta" target="_blank" class="btn-release">Download</a>
-                  <div class="btn-author">TheBITLINK</div>
+                <h1 class="release-title" itemprop="name">Full White Theme</h1>
+                <div class="release-btns"> <a href="https://github.com/mrmaple240/Full-Light-Theme" target="_blank" class="btn-release">Download</a>
+                  <div class="btn-author">Maple</div>
                 </div>
-                <iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/TheBITLINK/Discord-Adapta/master/discord-adapta.css"></iframe>
+                <iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/lightdiscord.html?theme=https://raw.githubusercontent.com/mrmaple240/Full-Light-Theme/master/FullLightTheme.theme.css"></iframe>
               </header>
               <div id="disqus_thread"></div>
               <script>
@@ -207,7 +207,6 @@
                 console.log("searching for: " + $(this).val());
                 var search = $(this).val().toLowerCase();
                 $("#plugin-list").find(".plugin").each(function() {
-
                     if ($(this).text().toLowerCase().includes(search)) {
                         $(this).show();
                     } else {
