--- a/plugins.html
+++ b/plugins.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" class="html-page">
     <head>
     <!-- title -->
@@ -153,14 +153,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 73</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 74</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">73 Plugins</div>
+                <div id="plugin-list-count">74 Plugins</div>
                 <hr>
               </header>
                   <ul id="plugin-list">
@@ -472,6 +472,16 @@
                       <a href="#Hide" class="plugin-tag">Hide</a> 
                       <a href="#Server" class="plugin-tag">Server</a>
                       <a href="#Channel" class="plugin-tag">Channel</a>  
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://gist.github.com/HansAnonymous/7ab7b1363b7d3587af9a183f8bb2e156" class="plugin-name" target="_blank">SendEmbeds</a>
+                      <p class="plugin-desc">Send Embeds with /e. Open my settings to see full description.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#HansAnonymous" class="plugin-tag">HansAnonymous</a> 
+                      <a href="#Embed" class="plugin-tag">Embed</a> 
+                      <a href="#Rich" class="plugin-tag">Rich</a>
+                      <a href="#Bot" class="plugin-tag">Bot</a>  
+                      <a href="#SelfBot" class="plugin-tag">SelfBot</a>  
                       </div>
                     </li>
                     <li class="plugin on"> <a href="https://github.com/Hyperbot-one/showEmojiServer-plugin/blob/master/showEmojiServer.plugin.js" class="plugin-name" target="_blank">showEmojiServer</a>
