--- a/themes/clearvision_ruby.html
+++ b/themes/clearvision_ruby.html
@@ -126,7 +126,7 @@
             </div>
       </header>
       <div class="tab-links fadeInDown">
-        <div class="left-tabs"> <a href="../installation.html"">
+        <div class="left-tabs"> <a href="../installation.html">
           <div class="tabb first-tab">Installation</div>
           </a> <a href="../themes.html">
           <div class="tabb second-tab">Themes</div>
