--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -101,20 +101,27 @@
                                             <div class="channel channel-text" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Read</span><!-- react-empty: 993 --></a></div>
                                             <div class="channel channel-text channel-muted unread" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Muted</span><!-- react-empty: 626 --></a></div>
                                             <header><span>Voice Channels</span></header>
-                                            <div class="channel channel-voice" draggable="true"><a draggable="false"><span class="channel-arrow"></span><span class="channel-name">Pfft</span></a>
-                                                <!-- react-empty: 2325 -->
-                                            </div>
-                                            <ul class="channel-voice-states">
-                                                <li class="">
-                                                    <div class="" draggable="true">
-                                                        <div class="avatar-small stop-animation" style="background-image: url(&quot;https://imgur.com/GX9LKBo.png&quot;);"></div><span>Omniscient</span></div>
-                                                </li>
-                                                <li class="speaking">
-                                                    <div class="" draggable="true">
-                                                        <div class="avatar-small stop-animation" style="background-image: url(&quot;https://i.imgur.com/3sc5OG3.png&quot;);"></div><span>BetterDiscord</span></div>
-                                                </li>
-                                            </ul>
-                                            <div style="width: 100%; height: 374px; visibility: hidden;"></div>
+                                            <div class="channel channel-voice" draggable="true">
+											<a draggable="false"><span class="channel-arrow">
+											</span><span class="channel-name">General</span>
+											<button class="icon icon-instant-invite"></button>
+											<button class="icon icon-settings"></button>
+											</a><ul class="channel-voice-states">
+											<li class=""><div class="draggable" draggable="true">
+											<div class="avatar-small animate" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/a74aaa81db633614ed77a50862b3a588.webp?size=256&quot;);"></div>
+											<span>Chris</span>
+											<i class="icon icon-muted"></i>
+											<i class="icon icon-deafened"></i>
+											</div></li>
+											<li class="speaking">
+											<div class="draggable" draggable="true">
+											<div class="avatar-small animate" style="background-image: url(&quot;https://i.imgur.com/3sc5OG3.png&quot;);"></div>
+											<span>Mr Robot</span>
+											</div>
+											</li>
+											</ul>
+											</div>
+                                            <div style="width: 100%; height: 200px; visibility: hidden;"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -406,7 +413,7 @@ Links
                                                             <!-- /react-text --><strong><!-- react-text: 236 -->Discord<!-- /react-text --></strong></div>
                                                     </div>
                                                 </div>
-                                                <div style="width: 100%; height: 100%; visibility: hidden;"></div>
+                                                <div style="width: 100%; height: 300px; visibility: hidden;"></div>
                                             </div>
                                         </div>
                                         <!-- react-empty: 186 -->
