--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -95,12 +95,12 @@
                                     <div class="scroller-wrap fade dark">
                                         <div class="scroller guild-channels">
                                             <div style="width: 100%; height: 0px; visibility: hidden;"></div>
-                                            <header><span>Text Channels</span></header>
-                                            <div class="channel channel-text selected" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">info</span><!-- react-empty: 618 --></a></div>
-                                            <div class="channel channel-text unread" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Unread</span><!-- react-empty: 993 --></a></div>
-                                            <div class="channel channel-text" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Read</span><!-- react-empty: 993 --></a></div>
-                                            <div class="channel channel-text channel-muted unread" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Muted</span><!-- react-empty: 626 --></a></div>
-                                            <header><span>Voice Channels</span></header>
+                                            <header><span>Text Channels</span><button></button></header>
+                                            <div class="channel channel-text selected" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">info</span><button class="icon icon-instant-invite"></button><button class="icon icon-settings"></button><!-- react-empty: 618 --></a></div>
+                                            <div class="channel channel-text unread" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Unread</span><button class="icon icon-instant-invite"></button><button class="icon icon-settings"></button><!-- react-empty: 993 --></a></div>
+                                            <div class="channel channel-text" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Read</span><button class="icon icon-instant-invite"></button><button class="icon icon-settings"></button><!-- react-empty: 993 --></a></div>
+                                            <div class="channel channel-text channel-muted unread" draggable="true"><a draggable="false" class="" href="#"><span class="channel-name">Muted</span><button class="icon icon-instant-invite"></button><button class="icon icon-settings"></button><!-- react-empty: 626 --></a></div>
+                                            <header><span>Voice Channels</span><button></button></header>
                                             <div class="channel channel-voice" draggable="true">
 											<a draggable="false"><span class="channel-arrow">
 											</span><span class="channel-name">General</span>
