--- a/plugins.html
+++ b/plugins.html
@@ -1,4 +1,4 @@
-s<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" class="html-page">
     <head>
     <!-- title -->
