--- a/themes.html
+++ b/themes.html
@@ -169,14 +169,14 @@
             <div class="inner">
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Themes</h1>
-                <div id="plugin-list-count" class="total-items">Total Themes: 60</div>
+                <div id="plugin-list-count" class="total-items">Total Themes: 61</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                 </h1>
-                <div id="plugin-list-count">50 Themes</div>
+                <div id="plugin-list-count">51 Themes</div>
                 <hr>
               </header>
               <ul id="plugin-list">
@@ -494,6 +494,16 @@
                   <a href="https://betterdocs.net/themes/nier-automata.html" class="plugin-name">NieR Automata</a>
                   <p class="plugin-desc">Based on game NieR Automata ; Of character 2B</p>
                   <div class="plugin-tag-list"> <a href="#AbdelBoukelch" class="plugin-tag">AbdelBoukelch</a> <a href="#Transparent" class="plugin-tag">Transparent</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/fHrYGZ7.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/clean-and-compact.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/clean-and-compact.html" class="plugin-name">Clean & Compact</a>
+                  <p class="plugin-desc">A dark, compact layout for those who like to save some space. Fullscreen usage is heavily discouraged.</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Kettui" class="plugin-tag">Kettui</a> 
+                  <a href="#Gray" class="plugin-tag">Gray</a> 
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
                 <li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/mCoVTSb.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/ultraflat.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
