--- a/themes.html
+++ b/themes.html
@@ -87,9 +87,6 @@
 	  $("#import-mobile-nav").load("https://betterdocs.net/classic/import/mobile-nav.html");
     });
     </script>
-<script>function scrollTo(hash) {
-    location.hash = "#" + hash;
-}</script>
 </head>
 
 <body class="body-page">
@@ -673,7 +670,33 @@
 <!-- push js --> 
 <script type="text/javascript" src="js/pushy.min.js"></script> 
 <!-- main js --> 
-<script type="text/javascript" src="js/main.js"></script> 
+<script type="text/javascript" src="js/main.js"></script>
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+</script> 
 <script type="text/javascript"  charset="utf-8">
 // Place this code snippet near the footer of your page before the close of the /body tag
 // LEGAL NOTICE: The content of this website and all associated program code are protected under the Digital Millennium Copyright Act. Intentionally circumventing this code may constitute a violation of the DMCA.
