--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
           BETTERDOCS.NET</h1>
       </div>
       <!-- end word rotator --> 
-      <a href="/betterdiscord/" class="button-regular animated entrance shorter" data-text="BetterDiscord">BetterDiscord</a> 
-      <a href="/beautifuldiscord/" class="button-regular animated entrance beautifuldiscord shorter" data-text="BeautifulDiscord">BeautifulDiscord</a> <br>
+      <a href="https://discord.gg/0Tmfo5ZbORCRqbAd" class="button-regular animated entrance shorter" data-text="BetterDiscord">BetterDiscord</a> 
+      <a href="https://discord.gg/3Uu6eY" class="button-regular animated entrance beautifuldiscord shorter" data-text="BeautifulDiscord">BeautifulDiscord</a> <br>
       <a href="#" class="button-regular show-countdown animated entrance shorter" data-text="BDv2 Countdown">BDv2 Countdown</a> </div>
     <!-- end content container --> 
     
