--- a/installation.html
+++ b/installation.html
@@ -184,6 +184,17 @@
       </div>
     </div>
     <!-- end logo --> 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    
     <div class="bd-install-image"><a href="https://discord.gg/0Tmfo5ZbORCRqbAd"><img src="img/betterdiscord.svg" class="bd-image"></a></div>
     <div class="beauty-install-text"><a href="https://discord.gg/3Uu6eY">BeautifulDiscord</a></div>
     <!-- content container -->
