--- a/plugins.html
+++ b/plugins.html
@@ -163,6 +163,18 @@
                 <div id="plugin-list-count">74 Plugins</div>
                 <hr>
               </header>
+                 
+                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                 
                   <ul id="plugin-list">
                 <li class="plugin on"> <a href="https://github.com/Jiiks/BetterDiscordApp/blob/master/Plugins/dblClickEdit.plugin.js" class="plugin-name" target="_blank">Double Click Edit</a>
                       <p class="plugin-desc">Double click your messages to edit them.</p>
@@ -510,6 +522,16 @@
                 <div id="plugin-list-count">0 Plugins</div>
                 <hr>
               </header>
+                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                   <div id="plugin-list-2">
                 <ul id="plugin-list">
                       <li class="plugin on"> <a href="#" class="plugin-name" target="_blank">In Progress</a>
