--- a/themes.html
+++ b/themes.html
@@ -176,6 +176,16 @@
                 <div id="plugin-list-count">51 Themes</div>
                 <hr>
               </header>
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
               <ul id="plugin-list">
                 <li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="classic/images/shop-display.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/classic/shop/themes.html" class="plugin-preview-link"><i class="fa fa-shopping-cart"></i></a> </div>
@@ -532,6 +542,16 @@
                 <div id="plugin-list-count">10 Themes</div>
                 <hr>
               </header>
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
               <div id="plugin-list-2">
                 <ul id="plugin-list">
                   <li class="plugin on">
