--- a/index.html
+++ b/index.html
@@ -180,7 +180,16 @@
       </div>
     </div>
     <!-- end logo --> 
-    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- content container -->
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 centering-y content-container"> 
       <!-- 8.1.2 word rotator -->
@@ -191,7 +200,8 @@
       <!-- end word rotator --> 
       <a href="https://discord.gg/0Tmfo5ZbORCRqbAd" class="button-regular animated entrance shorter" data-text="BetterDiscord">BetterDiscord</a> 
       <a href="https://discord.gg/3Uu6eY" class="button-regular animated entrance beautifuldiscord shorter" data-text="BeautifulDiscord">BeautifulDiscord</a> <br>
-      <a href="#" class="button-regular show-countdown animated entrance shorter" data-text="BDv2 Countdown">BDv2 Countdown</a> </div>
+      <a href="#" class="button-regular show-countdown animated entrance shorter" data-text="BDv2 Countdown">BDv2 Countdown</a> 
+      </div>
     <!-- end content container --> 
     
     <!-- 8.1.3 navigation guide (will be hidden on small devices) --> 
