--- a/installation.html
+++ b/installation.html
@@ -199,7 +199,16 @@
     <div class="beauty-install-text"><a href="https://discord.gg/3Uu6eY">BeautifulDiscord</a></div>
     <!-- content container -->
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 centering-y content-container"> 
-       </div>
+       </div><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- end content container --> 
     
     <!-- 8.1.3 navigation guide (will be hidden on small devices) --> 
