--- a/submit.html
+++ b/submit.html
@@ -141,7 +141,16 @@
       </div>
       <!-- end word rotator --> 
       
-      <a href="https://goo.gl/forms/gb4yWWJcc64Tdyw43" class="button-regular animated entrance" data-text="Themes">Themes</a> <a href="https://goo.gl/forms/hVkZ0Vb2AP79AMIy1" class="button-regular animated entrance" data-text="Plugins">Plugins</a> <a href="https://goo.gl/forms/iNct0S7gldczjCuZ2" class="button-regular animated entrance" data-text="Feedback">Feedback</a> </div>
+      <a href="https://goo.gl/forms/gb4yWWJcc64Tdyw43" class="button-regular animated entrance" data-text="Themes">Themes</a> <a href="https://goo.gl/forms/hVkZ0Vb2AP79AMIy1" class="button-regular animated entrance" data-text="Plugins">Plugins</a> <a href="https://goo.gl/forms/iNct0S7gldczjCuZ2" class="button-regular animated entrance" data-text="Feedback">Feedback</a> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
     <!-- end content container --> 
     
     <!-- 8.1.3 navigation guide (will be hidden on small devices) --> 
