--- a/plugins.html
+++ b/plugins.html
@@ -153,14 +153,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 74</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 82</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">74 Plugins</div>
+                <div id="plugin-list-count">82 Plugins</div>
                 <hr>
               </header>
                  
@@ -512,6 +512,75 @@
                       <a href="#Hide" class="plugin-tag">Hide</a> 
                       <a href="#Server" class="plugin-tag">Server</a>
                       <a href="#Channel" class="plugin-tag">Channel</a>  
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Hyperbot-one/showEmojiServer-plugin" class="plugin-name" target="_blank">showEmojiServer</a>
+                      <p class="plugin-desc">Displays an emoji's server in addition to its name when hovering over it.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#kdubious" class="plugin-tag">kdubious</a> 
+                      <a href="#Emoji" class="plugin-tag">Emoji</a> 
+                      <a href="#Server" class="plugin-tag">Server</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://gist.githubusercontent.com/Jiiks/be75742507ccf1587e8fd85851bdb26f/raw/3763ee411084c70fe137a0f5b2ee455db2450e0d/charCounter.plugin.js" class="plugin-name" target="_blank">Character Counter</a>
+                      <p class="plugin-desc">Adds character counter to channel textarea</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Jiiks" class="plugin-tag">Jiiks</a> 
+                      <a href="#Character" class="plugin-tag">Character</a> 
+                      <a href="#Counter" class="plugin-tag">Counter</a>
+                      <a href="#Numbers" class="plugin-tag">Numbers</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Arashiryuu/crap/blob/master/hideUsers.plugin.js" class="plugin-name" target="_blank">hideUsers</a>
+                      <p class="plugin-desc">Removes users from your client, (aside from the odd "New Message" notification in a channel, and typing indicator, sadly).</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a> 
+                      <a href="#Hide" class="plugin-tag">Hide</a> 
+                      <a href="#Block" class="plugin-tag">Block</a>
+                      <a href="#Remove" class="plugin-tag">Remove</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Arashiryuu/crap/blob/master/hideChannels.plugin.js" class="plugin-name" target="_blank">hideChannels</a>
+                      <p class="plugin-desc">Removes selected channels, however does not discriminate between voice-channels and regular text-channels.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a> 
+                      <a href="#Hide" class="plugin-tag">Hide</a> 
+                      <a href="#Remove" class="plugin-tag">Remove</a>
+                      <a href="#Channels" class="plugin-tag">Channels</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Arashiryuu/crap/blob/master/hideServers.plugin.js" class="plugin-name" target="_blank">hideServers</a>
+                      <p class="plugin-desc">Removes servers, works the same as the user variation of these plugins.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a> 
+                      <a href="#Hide" class="plugin-tag">Hide</a> 
+                      <a href="#Remove" class="plugin-tag">Remove</a>
+                      <a href="#Servers" class="plugin-tag">Servers</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/samogot/betterdiscord-plugins/tree/master/v2/1Temp%20Lib%20Plugin" class="plugin-name" target="_blank">Temp Lib Plugin</a>
+                      <p class="plugin-desc">This is temporary plugin, which works as library for other my plugins. It will be removed when this code will be included into BD itself</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Samogot" class="plugin-tag">Samogot</a> 
+                      <a href="#Library" class="plugin-tag">Library</a> 
+                      <a href="#Temporary" class="plugin-tag">Temporary</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/samogot/betterdiscord-plugins/tree/master/v2/No%20send%20scroll" class="plugin-name" target="_blank">No send scroll</a>
+                      <p class="plugin-desc">This is simple plugin which disables scroll to bottom on sending message. [Temp Lib Plugin Required]</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Samogot" class="plugin-tag">Samogot</a> 
+                      <a href="#Scroll" class="plugin-tag">Scroll</a> 
+                      <a href="#Disable" class="plugin-tag">Disable</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/samogot/betterdiscord-plugins/tree/master/v2/Full%20offline%20list" target="_blank">Full offline list</a>
+                      <p class="plugin-desc">This is simple plugin for getting back offline users list on large servers. [Temp Lib Plugin Required]</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Samogot" class="plugin-tag">Samogot</a> 
+                      <a href="#Offline" class="plugin-tag">Offline</a> 
+                      <a href="#List" class="plugin-tag">List</a>
+                      <a href="#Show" class="plugin-tag">Show</a>
                       </div>
                     </li>
               </ul>
