updated theme preview

--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -1068,8 +1068,8 @@ Links
                                         </form>
                                     </div>
                                     <div class="channel-members-wrap">
-                                        <div class="scroller-wrap fade light">
-                                            <div class="scroller channel-members">
+                                        <div class="scrollerWrap-2uBjct scrollerThemed-19vinI themeGhost-10fio9 scrollerFade-28dRsO">
+                                            <div class="scroller-fzNley channel-members">
                                                 <div style="width: 100%; height: 0px; visibility: hidden;"></div>
                                                 <h2><!-- react-text: 188 -->Owner<!-- /react-text --><!-- react-text: 189 -->—<!-- /react-text --><!-- react-text: 190 -->1<!-- /react-text --></h2>
                                                 <div class="member member-status member-status-online">
