--- a/installation.html
+++ b/installation.html
@@ -183,6 +183,9 @@
           </a> </div>
       </div>
     </div>
+    <div class="ad-banner">
+    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
+    </div>
     <!-- end logo --> 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Popular Ad -->
