--- a/submit.html
+++ b/submit.html
@@ -134,6 +134,9 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
     <!-- content container -->
+    <div class="ad-banner">
+    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
+    </div>
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 centering-y content-container"> 
       <!-- 8.1.2 word rotator -->
       <div class="wordrotator-container animated entrance">
