--- a/index.html
+++ b/index.html
@@ -179,17 +179,10 @@
           </a> </div>
       </div>
     </div>
-    <!-- end logo --> 
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Popular Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1998206533560539"
-     data-ad-slot="6545618600"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    <!-- end logo -->
+    <div class="ad-banner">
+    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
+    </div>
     <!-- content container -->
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 centering-y content-container"> 
       <!-- 8.1.2 word rotator -->
