--- a/themes.html
+++ b/themes.html
@@ -169,6 +169,9 @@
                 <div id="plugin-list-count" class="total-items">Total Themes: 61</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
+              <div class="ad-banner">
+    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
+    </div>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
