--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li class="pushy-link"><a href="installation.html">Installation</a></li>
                 <li class="pushy-link"><a href="themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="plugins.html">Plugins</a></li>
-                <li class="pushy-link"><a href="store.html">Store</a></li>
+                <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
                 <li class="pushy-link"><a href="submit.html">Submit</a></li>
                 <li class="pushy-link"><a href="https://paypal.me/Chaotiic">Donate</a></li>
               </ul>
@@ -170,8 +170,8 @@
       </div>
       <a href="/"> <img class="animated logo-page fadeInDown" src="img/betterdocs_white.svg" alt="logo"> </a>
       <div class="tab-links fadeInDown">
-        <div class="right-tabs"> <a href="store.html">
-          <div class="tabb fourth-tab">Store</div>
+        <div class="right-tabs"> <a href="https://raidforums.com">
+          <div class="tabb fourth-tab">Raidforums</div>
           </a> <a href="submit.html">
           <div class="tabb fifth-tab">Submit</div>
           </a> <a href="https://paypal.me/Chaotiic">
@@ -180,9 +180,6 @@
       </div>
     </div>
     <!-- end logo -->
-    <div class="ad-banner">
-    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
-    </div>
     <!-- content container -->
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 centering-y content-container"> 
       <!-- 8.1.2 word rotator -->
