--- a/installation.html
+++ b/installation.html
@@ -145,7 +145,7 @@
                 <li class="pushy-link active-mtab"><a href="installation.html">Installation</a></li>
                 <li class="pushy-link"><a href="themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="plugins.html">Plugins</a></li>
-                <li class="pushy-link"><a href="store.html">Store</a></li>
+                <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
                 <li class="pushy-link"><a href="submit.html">Submit</a></li>
                 <li class="pushy-link"><a href="https://paypal.me/Chaotiic">Donate</a></li>
               </ul>
@@ -174,17 +174,14 @@
       </div>
       <a href="/"> <img class="animated logo-page fadeInDown" src="img/betterdocs_white.svg" alt="logo"> </a>
       <div class="tab-links fadeInDown">
-        <div class="right-tabs"> <a href="store.html">
-          <div class="tabb fourth-tab">Store</div>
+        <div class="right-tabs"> <a href="https://raidforums.com">
+          <div class="tabb fourth-tab">Raidforums</div>
           </a> <a href="submit.html">
           <div class="tabb fifth-tab">Submit</div>
           </a> <a href="https://paypal.me/Chaotiic">
           <div class="tabb sixth-tab">Donate</div>
           </a> </div>
       </div>
-    </div>
-    <div class="ad-banner">
-    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
     </div>
     <!-- end logo --> 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
