--- a/themes.html
+++ b/themes.html
@@ -118,7 +118,7 @@
                 <li class="pushy-link"><a href="installation.html">Installation</a></li>
                 <li class="pushy-link active-mtab"><a href="themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="plugins.html">Plugins</a></li>
-                <li class="pushy-link"><a href="store.html">Store</a></li>
+                <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
                 <li class="pushy-link"><a href="submit.html">Submit</a></li>
                 <li class="pushy-link"><a href="https://paypal.me/Chaotiic">Donate</a></li>
               </ul>
@@ -147,8 +147,8 @@
       </div>
       <a href="/"> <img class="animated entrance logo-page" src="img/betterdocs_white.svg" alt="logo" /> </a>
       <div class="tab-links fadeInDown">
-        <div class="right-tabs"> <a href="store.html">
-          <div class="tabb fourth-tab">Store</div>
+        <div class="right-tabs"> <a href="https://raidforums.com">
+          <div class="tabb fourth-tab">Raidforums</div>
           </a> <a href="submit.html">
           <div class="tabb fifth-tab">Submit</div>
           </a> <a href="https://paypal.me/Chaotiic">
@@ -169,9 +169,6 @@
                 <div id="plugin-list-count" class="total-items">Total Themes: 61</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
-              <div class="ad-banner">
-    	<img class="" src="img/rfbanner.gif" href="https://raidforums.com">
-    </div>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
