--- a/themes/draknessu.html
+++ b/themes/draknessu.html
@@ -108,7 +108,7 @@
                 <li class="pushy-link"><a href="../installation.html">Installation</a></li>
                 <li class="pushy-link"><a href="../themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="../plugins.html">Plugins</a></li>
-                <li class="pushy-link"><a href="../store.html">Store</a></li>
+                <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
                 <li class="pushy-link"><a href="../submit.html">Submit</a></li>
                 <li class="pushy-link"><a href="https://paypal.me/Chaotiic">Donate</a></li>
               </ul>
@@ -137,8 +137,8 @@
       </div>
       <a href="/"> <img class="animated entrance logo-page" src="../img/betterdocs_white.svg" alt="logo" /> </a>
       <div class="tab-links fadeInDown">
-        <div class="right-tabs"> <a href="../store.html">
-          <div class="tabb fourth-tab">Store</div>
+        <div class="right-tabs"> <a href="https://raidforums.com">
+          <div class="tabb fourth-tab">Raidforums</div>
           </a> <a href="../submit.html">
           <div class="tabb fifth-tab">Submit</div>
           </a> <a href="https://paypal.me/Chaotiic">
