--- a/plugins.html
+++ b/plugins.html
@@ -574,7 +574,7 @@
                       <a href="#Disable" class="plugin-tag">Disable</a>
                       </div>
                     </li>
-                    <li class="plugin on"> <a href="https://github.com/samogot/betterdiscord-plugins/tree/master/v2/Full%20offline%20list" target="_blank">Full offline list</a>
+                    <li class="plugin on"> <a href="https://github.com/samogot/betterdiscord-plugins/tree/master/v2/Full%20offline%20list" class="plugin-name" target="_blank">Full offline list</a>
                       <p class="plugin-desc">This is simple plugin for getting back offline users list on large servers. [Temp Lib Plugin Required]</p>
                       <div class="plugin-tag-list"> 
                       <a href="#Samogot" class="plugin-tag">Samogot</a> 
