--- a/plugins.html
+++ b/plugins.html
@@ -153,14 +153,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 82</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 86</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">82 Plugins</div>
+                <div id="plugin-list-count">86 Plugins</div>
                 <hr>
               </header>
                  
@@ -581,6 +581,41 @@
                       <a href="#Offline" class="plugin-tag">Offline</a> 
                       <a href="#List" class="plugin-tag">List</a>
                       <a href="#Show" class="plugin-tag">Show</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/restartNoMore.plugin.js" class="plugin-name" target="_blank">restartNoMore</a>
+                      <p class="plugin-desc">Abandons the need for restarting/reloading discord to get your new plugins and themes. Especially useful for development.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Developer" class="plugin-tag">Developer</a> 
+                      <a href="#Fast" class="plugin-tag">Fast</a>
+                      <a href="#Development" class="plugin-tag">Development</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/linkProfilePicture.plugin.js" class="plugin-name" target="_blank">linkProfilePicture</a>
+                      <p class="plugin-desc">Lets you click users' avatars on their profile page to view a bigger version in your browser.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Avatar" class="plugin-tag">Avatar</a> 
+                      <a href="#Image" class="plugin-tag">Image</a>
+                      <a href="#Profile" class="plugin-tag">Profile</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/forceClose.plugin.js" class="plugin-name" target="_blank">forceClose</a>
+                      <p class="plugin-desc">Actually closes discord when clicking the close button.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Exit" class="plugin-tag">Exit</a> 
+                      <a href="#Close" class="plugin-tag">Close</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/clearInputOnEsc.plugin.js" class="plugin-name" target="_blank">clearInputOnEsc</a>
+                      <p class="plugin-desc">Clears the chat input when you hit escape inside it.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Clear" class="plugin-tag">Clear</a> 
+                      <a href="#Erase" class="plugin-tag">Erase</a>
+                      <a href="#Chat" class="plugin-tag">Chat</a>
                       </div>
                     </li>
               </ul>
